--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="favorite">مورد علاقه</string>
     <string name="created">ساخته شده</string>
     <string name="add_to_bookmark">به علاقه مندی ها اضافه شد</string>
+    <string name="create_story">ایجاد داستان</string>
 
 </resources>
