--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,18 @@
     <string name="created">ساخته شده</string>
     <string name="add_to_bookmark">به علاقه مندی ها اضافه شد</string>
     <string name="create_story">ایجاد داستان</string>
+    <string name="create_category">ایجاد دسته بندی</string>
+    <string name="story_save">داستان در دسته بندی انتخاب شده، ثبت شد</string>
+    <string name="new_category">دسته بندی جدید</string>
+    <string name="enter_category_name">اسم دسته بندی را وارد کنید</string>
+    <string name="confirm">تایید</string>
+    <string name="cancel">لغو</string>
+    <string name="blank_title">لطفا عنوان را وارد کنید</string>
+    <string name="blank_content">لطفا محتوا را وارد کنید</string>
+    <string name="stories">داستان ها</string>
+    <string name="documents">اسناد</string>
+    <string name="create_doc">ایجاد محتوا</string>
+    <string name="create">ایجاد</string>
+    <string name="delete_from_bookmark">از علاقه مندی ها حذف شد</string>
 
 </resources>
