set loading in home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="add_to_bookmark">به علاقه مندی ها اضافه شد</string>
     <string name="create_story">ایجاد داستان</string>
     <string name="create_category">ایجاد دسته بندی</string>
-    <string name="story_save">داستان در دسته بندی انتخاب شده، ثبت شد</string>
+    <string name="story_save">سند ایجاد شده، ثبت شد</string>
     <string name="new_category">دسته بندی جدید</string>
     <string name="enter_category_name">اسم دسته بندی را وارد کنید</string>
     <string name="confirm">تایید</string>
