--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,12 @@
     <string name="error_process_payment_bazaar">عملیات پرداخت ناموفق بود</string>
     <string name="you_now_vip">تبریک! درحال حاضر شما کاربر ویژه هستید 🥳</string>
     <string name="vip_payment">ارتقا دائمی به کاربر ویژه</string>
+    <string name="mounch_12">۱۲ ماهه</string>
+    <string name="mounch_6">۶ ماهه</string>
+    <string name="mounch_3">۳ ماهه</string>
+    <string name="auto_translate">ترجمه خودکار</string>
+    <string name="auto_translate_desc">امکان ترجمه خودکار تمامی داستان های برنامه و اسناد(داستان،مقاله،یادداشت و…) های ساخته شده ی شما</string>
+    <string name="dictionary">دیکشنری</string>
+    <string name="dictionary_desc">امکان نمایش دیکشنری با کلیک بر روی هر لغت از داستان ها و اسناد ساخته شده</string>
 
 </resources>
