--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,8 @@
     <string name="learn_english_with_story">آموزش زبان با داستان های انگلیسی</string>
     <string name="vip_user">کاربر ویژه</string>
     <string name="invite_friends">دعوت از دوستان</string>
-    <string name="send_app_to_other">اپلیکیشن یادگیری زبان با داستان های مختلف و داستان های خود!\\n link</string>
+    <string name="send_app_to_other">اپلیکیشن یادگیری زبان با داستان های مختلف و داستان های خود!
+    https://cafebazaar.ir/app/com.alirezasn80.learn_en</string>
     <string name="about_us">درباره ما</string>
     <string name="report_text">متن گزارش</string>
     <string name="your_text_sent">متن شما ارسال شد</string>
