--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,6 @@
     <string name="aboutus">درباره ما</string>
     <string name="aboutus_desc">این اپلیکیشن ابزاری آموزشی است که به کاربران کمک می‌کند تا زبان انگلیسی خود را از طریق مطالعه داستان های برنامه و متن های مورد علاقه خودتان، تقویت کنند. این
         اپلیکیشن شامل یک سیستم ترجمه خودکار است که به کاربران اجازه می‌دهد متون را به راحتی ترجمه کنند.\n همچنین، یک دیکشنری داخلی برای جستجوی معانی کلمات وجود دارد. \nکاربران می‌توانند عکس‌های متنی را به متن قابل ویرایش تبدیل کنند و صحبت‌های خود را به متن انگلیسی تبدیل نمایند.\n علاوه بر این، کاربران می‌توانند داستان‌های خود را بنویسند و در برنامه از قابلیت ترجمه استفاده کنند و از داستان‌های موجود در دسته‌بندی‌های مختلف لذت ببرند.\nمنابع: \nhttps://www.kidsworldfun.com/\nhttps://www.vedantu.com/\n</string>
+    <string name="no_found_data">داده ای یافت نشد!</string>
 
 </resources>
