fix aware of update in app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
         اپلیکیشن شامل یک سیستم ترجمه خودکار است که به کاربران اجازه می‌دهد متون را به راحتی ترجمه کنند.\n همچنین، یک دیکشنری داخلی برای جستجوی معانی کلمات وجود دارد. \nکاربران می‌توانند عکس‌های متنی را به متن قابل ویرایش تبدیل کنند و صحبت‌های خود را به متن انگلیسی تبدیل نمایند.\n علاوه بر این، کاربران می‌توانند داستان‌های خود را بنویسند و در برنامه از قابلیت ترجمه استفاده کنند و از داستان‌های موجود در دسته‌بندی‌های مختلف لذت ببرند.\nمنابع: \nhttps://www.kidsworldfun.com/\nhttps://www.vedantu.com/\n</string>
     <string name="no_found_data" translatable="false">داده ای یافت نشد!</string>
     <string name="saved" translatable="false">ذخیره شد</string>
+    <string name="update_app">بروزرسانی برنامه</string>
 
 </resources>
