--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="show_translate">نمایش ترجمه</string>
     <string name="removed_from_flashcards">لغت از فلش کارت حذف شد</string>
     <string name="more_detail">«جزییات بیشتر»</string>
+    <string name="check_connection">لطفا اینترنت خود را چک کنید!</string>
 
 </resources>
